working on large text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,10 @@ body {
   font-family: 'Margarine', cursive;
 }
 
+.dark--mode {
+  background-color: lavender;
+}
+
 .navbar {
   background-color: #6330CE !important;
 }
@@ -21,4 +25,14 @@ img {
 
 #currentUserMessages {
   margin-top: 100px
+}
+
+.large--text {
+  font-size: 50px !important;
+  color: red;
+}  
+
+.card {
+  font-size: 50px !important;
+
 }
