dark mode mvp only

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .dark--mode {
-  background-color: lavender;
+  background-color: #6330CE;
 }
 
 .navbar {
@@ -30,3 +30,7 @@ img {
 .large--text {
   font-size: 30px !important;
 }  
+
+.dark-card-mode {
+  background-color: 6330CE !important;
+}
